# crewee

./: .env.example  .gitignore  .pre-commit-config.yaml  .sql-formatter.json  CLAUDE.md  README.md  README_REGION_DATA.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg
.claude/: settings.json
.husky/: pre-commit
backend/: .golangci.yml  Makefile  go.mod  go.sum  sqlc.yaml
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/migrations/: 20250727045746_001_initial_enums.down.sql  20250727045746_001_initial_enums.up.sql  20250727045832_002_basic_tables.down.sql  20250727045832_002_basic_tables.up.sql  20250727051748_003_insert_sports_master_data.down.sql  20250727051748_003_insert_sports_master_data.up.sql  20250802044156_005_create_teams_and_team_regions.down.sql  20250802044156_005_create_teams_and_team_regions.up.sql  20250802044241_006_create_events.down.sql  20250802044241_006_create_events.up.sql  20250802044312_007_create_applications_and_event_comments.down.sql  20250802044312_007_create_applications_and_event_comments.up.sql  20250802062421_004_update_regions_data.down.sql  20250802062421_004_update_regions_data.up.sql  20250802131244_004_update_regions_data.down.sql  20250802131244_004_update_regions_data.up.sql
backend/sql/: local_government_codes.csv.backup
context/: design.md  requirements.md  tasks.md
frontend/: .prettierrc  eslint.config.mjs  package-lock.json  package.json
scripts/: convert_lgcode_to_csv.py  generate_region_diff_migration.py  setup-hooks.sh
(+14 files in other folders)
